# gazebo-ros-actor-plugin

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml
config/models/animations/: model.config
config/params/: animation_config.yaml
config/worlds/: animation_switch.world  move_actor.world
include/gazebo_ros_actor_plugin/: gazebo_ros_actor_command.h
launch/: animation_switch.launch  sim.launch
msg/: ActorAnimation.msg
scripts/: animation_switch.py
src/: gazebo_ros_actor_command.cpp
